#142 refactor(common, reservation): 분산 락 관리 컴포넌트 분리
ReservationService 내에 있던 분산 락 관리 로직을
DistributedLockManager로 분리했습니다. 템플릿 콜백 패턴을 적용하여
락 획득과 해제 책임을 캡슐화함으로써, 비즈니스 로직의 응집도를 높이고
중복 코드 및 휴먼 에러 가능성을 제거했습니다.

주요 변경사항:
- DistributedLockManager 구현 및 단위 테스트 작성 (성공/실패 시나리오)
- ReservationService가 매니저 컴포넌트를 사용하도록 리팩토링
- 불필요한 RedissonClient 의존성 제거 및 테스트 Mocking 간소화

Resolves: #142
See also: None